# xpid

./: .gitignore  .header-asterisk  .header-hashsign  100  LICENSE  Makefile  README.md  compile_meta.go  go.mod  go.sum  meta.go  nova.go  run-build
aur/: .gitignore  PKGBUILD  PKGBUILD.libxpid  PKGBUILD.xpid  publish
bpf/: .gitignore  Makefile  README.md  probe.tracepoints.c  vmlinux.h  xpid-bpf  xpid-bpf.c  xpid-bpf.h
cmd/: main.go  runtime.go
internal/nova/: nova.go  nova_test.go
libxpid/: CMakeLists.txt  README.md  configure
libxpid/include/: xpid.h
libxpid/src/: bpf.c  mod_proc.c  proc.c  proc.h  proc_dir.c  proc_pid.c  version.h  xpid_proc.c
libxpid/xp/: .gitignore  Makefile  xp.c
pkg/api/: interface.go  types.go
pkg/api/v1/: interface.go  module.go  module_container.go  module_ebpf.go  module_namespace.go  module_proc.go  process.go  types.go
pkg/encoders/: encoder.go
pkg/encoders/json/: encoder.go
pkg/encoders/raw/: encoder-color.go  encoder.go
pkg/encoders/table/: encoder.go
pkg/filters/: filter.go  filter_containers.go  filter_ebpf.go  filter_empty.go  filter_hidden.go  filter_namespace_cgroup.go  filter_namespace_ipc.go  filter_namespace_mount.go  filter_namespace_net.go  filter_namespace_pid.go  filter_namespace_time.go  filter_namespace_uts.go  filter_thread.go
pkg/libxpid/: libxpid_bpf.go  libxpid_pid.go  libxpid_proc_dir.go
pkg/modules/: README.md  module.go
pkg/modules/container/: mod.go
pkg/modules/ebpf/: fsfd.go  mod.go
pkg/modules/namespace/: mod.go
pkg/modules/proc/: libxpid_bind.go  mod.go  procfs.go
pkg/proc/: proc.go
pkg/procfs/: procfs.go
pkg/procx/: interface.go  procx.go  procx_test.go  query.go  query_test.go  system_linux.go
pkg/service/: nova.go  nova_test.go
